<resources>
    <string name="app_name">Resolve</string>
    <string name="action_settings">Settings</string>
    <string name="resolution_title">Resolution</string>
    <string name="resolution_hint">I will…</string>
    <string name="category_title">Category</string>
    <string name="category_hint">#Fitness, #Lifestyle</string>
    <string name="frequency_title">Frequency</string>
    <string name="frequency_type">Daily</string>
    <string name="add_resolution_text">Add Resolution</string>
    <string name="frequency_daily">Daily</string>
    <string name="frequency_weekly">Weekly</string>
    <string name="frequency_monthly">Monthly</string>
    <string name="set_frequency">Set</string>

</resources>
