<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingLeft="16dp"
    android:paddingTop="16dp"
    >

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RadioButton
            android:id="@+id/radio_daily"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/frequency_daily" />

        <RadioButton
            android:id="@+id/radio_weekly"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/frequency_weekly" />

        <RadioButton
            android:id="@+id/radio_monthly"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/frequency_monthly" />

    </RadioGroup>

    <Button
        android:id="@+id/set_btn"
        style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:text="@string/set_frequency" />
</LinearLayout>
