<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.nvapps.resolve.CreateActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/resolution_title"
        android:textSize="24sp"
        android:textStyle="bold"
        android:fontFamily="sans-serif-condensed"
        android:textColor="#666666"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/resolution_hint"
        android:id="@+id/edit_title"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/category_title"
        android:textSize="24sp"
        android:layout_marginTop="24dp"
        android:textStyle="bold"
        android:fontFamily="sans-serif-condensed"
        android:textColor="#666666"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/category_hint"
        android:id="@+id/edit_category"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="Start Date"
        android:textSize="24sp"
        android:textStyle="bold"
        android:fontFamily="sans-serif-condensed"/>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FFFFFF"
        android:layout_margin="4dp"
        android:elevation="4dp">

        <Button
            android:id="@+id/button_start_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackground"
            android:drawableRight="@android:drawable/ic_menu_my_calendar"
            android:onClick="showDatePickerDialog"
            />

    </FrameLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/frequency_title"
        android:textSize="24sp"
        android:textStyle="bold"
        android:fontFamily="sans-serif-condensed"/>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FFFFFF"
        android:layout_margin="4dp"
        android:elevation="4dp">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackground"
            android:id="@+id/button_frequency"
            android:text="@string/frequency_type"
            android:drawableRight="@android:drawable/ic_menu_day"
            />

    </FrameLayout>

</LinearLayout>
