<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:id="@+id/cardview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_large"
        android:layout_marginRight="@dimen/margin_large"
        android:background="#FFFFFF"
        android:elevation="4dp"
        card_view:cardCornerRadius="8dp"
        >

        <TextView
            android:id="@+id/item_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/resolution_title"
            android:textColor="#222222"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/item_category"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/category_title"
            android:textColor="#555555"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/item_frequency"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/frequency_type"
            android:textColor="#888888"
            android:textSize="16sp" />

    </android.support.v7.widget.CardView>

</LinearLayout>